# mysca

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
demo/: README.md  run_demo_SH3.sh
demo/SH3/data/: structures.tsv
demo/SH3/scripts/: step0_prealign_raw.sh  step1_preprocessing.sh  step1_preprocessing_raw.sh  step2_scacore.sh  step3_project.sh  step3_project_raw.sh  step3_scacore_raw.sh  step4_project_hmmer.sh  step5_structure.sh  step6_plots.sh  step6_plots_raw.sh  step7_pymol.sh  step7b_pymol_extra_ics.sh  step7c_pymol_features.sh  (+1 more)
demo/pymol_features/: narg_1q16.py  sh3_1shf.py  sh3_2abl.py
docs/: cli_reference.md  glossary.md  pysca_frequency_inconsistency.md  weight_methods.md
docs/.claude_sessions/: codebase_overview.md  plan_mysca_project_and_structure.md  plan_sca_pymol_rewrite.md  plan_synthetic_projection_fixture.md  session_2026-03-30_results_classes.md  session_2026-03-30_sectors_for_arg.md  session_2026-03-31_readme_noncanonical_weightdocs.md  session_2026-04-21_fijab_regularization_test_fixes.md  session_2026-04-21_logging_migration.md  session_2026-04-21_merge_logging_and_filter_plots.md  session_2026-04-21_preprocess_filter_plots.md  session_2026-04-22_gap_value_default.md  session_2026-04-22_ic_handling_and_plotting_cleanup.md  session_2026-04-22_prealign_diag_plot_api_ic_log_scoping.md  session_2026-04-22_replay_cli_docs_mapping_info.md  session_2026-04-22_sca_prealign_cli_and_demo.md  session_2026-04-22_stockholm_format_and_branch_hygiene.md  session_2026-04-24_project_structure_pymol_sifts.md  session_2026-04-25_entrypoint_doc_audit_v0.1.0.md  session_2026-04-25_pymol_animation_glossary_rename.md  session_2026-04-27_scacore_perf_phase1.md  session_2026-05-02_sequence_space_projection.md  session_2026-05-05_audit_rollout_steps_1_through_8.md  session_2026-05-05_preprocess_xmsa_oom_fix.md  session_2026-05-07_sca_project_raw_and_align_target.md  session_2026-05-08_per_input_seq_retention_and_coverage.md  session_2026-05-08_user_configurable_sector_colors.md  session_2026-05-14_rawseq_indices_subset_oom_fix.md
src/mysca/: __init__.py  __main__.py  _acceleration.py  constants.py  core.py  helpers.py  io.py  logging_config.py  mappings.py  prealign.py  preprocess.py  results.py  run_full_pipeline.py  run_plots.py  run_prealign.py  run_preprocessing.py  run_project.py  run_pymol.py  run_sca.py  run_structure.py  structures.py  tools.py
tests/: conftest.py  test_assignment.py  test_core.py  test_empty_groups.py  test_entrypoint_plots.py  test_entrypoint_prealign.py  test_entrypoint_preprocessing.py  test_entrypoint_preprocessing_stockholm.py  test_entrypoint_pymol.py  test_entrypoint_scarun.py  test_gap_value.py  test_helpers.py  test_ic_summary_log.py  test_io.py  test_logging.py  test_n_components.py  test_plotting_guards.py  test_preprocess.py  test_project.py  test_project_synthetic.py  test_results.py  test_sector_colors.py  test_sparse_overflow.py  test_structure.py  test_structure_pdb_fetcher.py  test_structure_sifts.py  test_structures.py  test_sym_maps.py
tests/_data/: test_cases.xlsx  test_msa05_fijab.txt  test_msa06_Cijab_raw.txt  test_msa06_Cijab_sca.txt  test_msa06_fijab.txt  test_msa07_fijab.txt  test_msa08_Cijab_raw.txt  test_msa08_Cijab_sca.txt  test_msa08_fijab.txt
(+123 files in other folders)
