[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysca"
dynamic = ["version"]
requires-python = ">= 3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
description = "An implementation of the SCA pipeline."
authors = [
  {name = "Addison Howe"},
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "pandas",
  "matplotlib",
  "seaborn",
  "biopython",
  "jax",
  "imageio",
  "tqdm",
  "ipykernel",
  "ipywidgets",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
mp4 = [
  "imageio-ffmpeg",
]
prealign = [
  # External binaries (mafft, mmseqs2) are not pip-installable; install via
  # `conda install -c bioconda mafft mmseqs2` or ensure they are on PATH.
]
# Note: pymol-open-source is now a required runtime dependency for
# `sca-pymol`, but it is not pip-installable on every platform and the
# conda-forge build registers as `pymol` in site-packages. Install via
# `conda install -c conda-forge pymol-open-source` (also pinned in
# environment.yml). `sca-pymol` will raise ImportError with an install
# hint if it is missing.

[tool.setuptools.dynamic]
version = {attr = "mysca.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sca-prealign = "mysca.__main__:run_prealign"
sca-preprocess = "mysca.__main__:run_preprocessing"
sca-core = "mysca.__main__:run_sca"
sca-pymol = "mysca.__main__:run_pymol"
sca-plots = "mysca.__main__:run_plots"
sca-project = "mysca.__main__:run_project"
sca-structure = "mysca.__main__:run_structure"
